feat: add Company logic, role-based security, and custom exceptions